--- a/portfolio.html
+++ b/portfolio.html
@@ -73,7 +73,7 @@
             <div class="my-3 mb-lg-0">
               <span class="subtitle">My About Details</span>
               <h2>About Me</h2>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum, explicabo.</p>
+              <p>Enthusiastic and self-motivated Web Developer</p>
             </div>
             <div class="pt-4">
               <ul class="nav nav-pills justify-content-center justify-content-lg-between mb-3" id="pills-tab" role="tablist">
@@ -151,19 +151,37 @@
           <div class="col-sm-12 text-center mb-4">
             <span class="subtitle">My Complete project</span>
             <h2>My Latest Projects</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br class="d-none d-md-block"> Lorem ipsum dolor sit.</p>
+            <p>Tried making some projects using <br class="d-none d-md-block"> HTML, CSS, JavaScript </p>
           </div>
         </div>
         <div class="row">
           <div class="col-lg-4 col-md-3 mb-4">
+            <h4><a href="https://github.com/AmishaBoora/Coffee">Coffee </a></h4>
             <div class="card p-0">
-              <span style="background-image: url('./images/calcul.jpeg');"></span>
+              <img src="./images/coffee.jpeg" alt="">
+              <!-- <button><a href="https://github.com/AmishaBoora/Coffee">coffee</a></button> -->
             </div>            
           </div>
           <div class="col-lg-4 col-md-3 mb-4">
+            <h4><a href="https://github.com/AmishaBoora/OIBSIP_-/tree/main/Task%201">Calculator </a></h4>
             <div class="card p-0">
-              <span style="background-image: url('./images/todo.jpeg');"></span>
-            </div>
+              <img src="./images/calcul.jpeg" alt="">
+              <!-- <button><a href="https://github.com/AmishaBoora/Coffee">coffee</a></button> -->
+            </div> 
+          </div>
+          <div class="col-lg-4 col-md-3 mb-4">
+            <h4><a href="https://github.com/AmishaBoora/OIBSIP_-/tree/main/Task%203">ToDoList</a></h4>
+            <div class="card p-0">
+              <img src="./images/todo.jpeg" alt="">
+              <!-- <button><a href="https://github.com/AmishaBoora/Coffee">coffee</a></button> -->
+            </div>            
+          </div>
+          <div class="col-lg-4 col-md-3 mb-4 mt-5">
+            <h4><a href="https://github.com/AmishaBoora/Weather">Weather </a></h4>
+            <div class="card p-0">
+              <img src="./images/weather.jpeg" alt="">
+              <!-- <button><a href="https://github.com/AmishaBoora/Coffee">coffee</a></button> -->
+            </div>            
           </div>
         </div>
       </div>
@@ -201,8 +219,8 @@
           <div class="col-lg-4 col-md-6">
             <ul class="list-unstyled d-flex justify-content-center justify-content-md-end justify-content-lg-center social-icon mb-3 mb-md-0">
               <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-              <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
-              <li><a href="#"><i class="fa-brands fa-github"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/amisha-boora-31a41224a/"><i class="fa-brands fa-linkedin"></i></a></li>
+              <li><a href="https://github.com/AmishaBoora/"><i class="fa-brands fa-github"></i></a></li>
               <li><a href="#"><i class="fa-solid fa-envelope"></i></a></li>
             </ul>
           </div>
