--- a/portfolio.html
+++ b/portfolio.html
@@ -157,7 +157,7 @@
           <div class="col-lg-4 col-md-3 mb-4">
             <h4><a href="https://github.com/AmishaBoora/Coffee">Coffee </a></h4>
             <div class="card p-0">
-              <img src=".//images/coffee.jpeg" alt="" >
+              <img src="./images/coffee.jpeg" alt="" >
             </div>            
           </div>
           <div class="col-lg-4 col-md-3 mb-4">
