--- a/portfolio.html
+++ b/portfolio.html
@@ -163,25 +163,25 @@
           <div class="col-lg-4 col-md-3 mb-4">
             <h4><a href="https://github.com/AmishaBoora/OIBSIP_-/tree/main/Task%201">Calculator </a></h4>
             <div class="card p-0">
-              <img src="./images/calcul.jpeg" alt="">
+              <img src="././images/calcul.jpeg" alt="">
             </div> 
           </div>
           <div class="col-lg-4 col-md-3 mb-4">
             <h4><a href="https://github.com/AmishaBoora/OIBSIP_-/tree/main/Task%203">ToDoList</a></h4>
             <div class="card p-0">
-              <img src="./images/todo.jpeg" alt="">
+              <img src="././images/todo.jpeg" alt="">
             </div>            
           </div>
           <div class="col-lg-4 col-md-3 mb-4 mt-5">
             <h4><a href="https://github.com/AmishaBoora/Weather">Weather </a></h4>
             <div class="card p-0">
-              <img src="./images/weather.jpeg" alt="">
+              <img src="././images/weather.jpeg" alt="">
             </div>            
           </div>
           <div class="col-lg-4 col-md-3 mb-4 mt-5">
             <h4><a href="https://github.com/AmishaBoora/LGMVIP-Web/tree/main/Form">Form </a></h4>
             <div class="card p-0">
-              <img src="./images/form-img.png" alt="">
+              <img src="././images/form-img.png" alt="">
             </div>            
           </div>
         </div>
