--- a/portfolio.html
+++ b/portfolio.html
@@ -155,31 +155,31 @@
         </div>
         <div class="row">
           <div class="col-lg-4 col-md-3 mb-4">
-            <h4><a href="https://github.com/AmishaBoora/Coffee">Coffee </a></h4>
+            <h4><a href="https://amishaboora.github.io/Coffee/">Coffee </a></h4>
             <div class="card p-0">
               <img src="./images/coffee.jpeg" alt="" >
             </div>            
           </div>
           <div class="col-lg-4 col-md-3 mb-4">
-            <h4><a href="https://github.com/AmishaBoora/OIBSIP_-/tree/main/Task%201">Calculator </a></h4>
+            <h4><a href="https://amishaboora.github.io/Calculator/calp.html">Calculator </a></h4>
             <div class="card p-0">
               <img src="./images/calcul.jpeg" alt="">
             </div> 
           </div>
           <div class="col-lg-4 col-md-3 mb-4">
-            <h4><a href="https://github.com/AmishaBoora/OIBSIP_-/tree/main/Task%203">ToDoList</a></h4>
+            <h4><a href="https://amishaboora.github.io/To-Do-List/">ToDoList</a></h4>
             <div class="card p-0">
               <img src="./images/todo.jpeg" alt="">
             </div>            
           </div>
           <div class="col-lg-4 col-md-3 mb-4 mt-5">
-            <h4><a href="https://github.com/AmishaBoora/Weather">Weather </a></h4>
+            <h4><a href="https://amishaboora.github.io/Weather/weather.html">Weather </a></h4>
             <div class="card p-0">
               <img src="./images/weather.jpeg" alt="">
             </div>            
           </div>
           <div class="col-lg-4 col-md-3 mb-4 mt-5">
-            <h4><a href="https://github.com/AmishaBoora/LGMVIP-Web/tree/main/Form">Form </a></h4>
+            <h4><a href="https://amishaboora.github.io/Form/form.html">Form </a></h4>
             <div class="card p-0">
               <img src="./images/form-img.png" alt="">
             </div>            
